--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.0",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.33.0",
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
@@ -41,6 +43,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/buffer-to-stream": "^1.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.7",
